--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -20,9 +20,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
-
-    - name: Run tests
-      run: |
-        cd src
-        python -m pytest addition.py
+		
+	- name: Build and push docker image
+	  uses: mr-smithers-excellent/docker-build-push@v6
+	  with:
+          image: sudhadn/python-hello-world
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+	  
