--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -1,29 +1,26 @@
 name: My First GitHub Actions
-
-on: [push]
-
+'on':
+  - push
 jobs:
   build:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
-
+        python-version:
+          - 3.8
+          - 3.9
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-		
-    - name: Build and push docker image
-      uses: mr-smithers-excellent/docker-build-push@v6
-      with:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '${{ matrix.python-version }}'
+      - name: Build and push docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
           image: sudhadn/python-hello-world
           tags: latest
           registry: docker.io
           dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-	  
+          username: '${{ secrets.DOCKER_USERNAME }}'
+          password: '${{ secrets.DOCKER_PASSWORD }}'
