--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -21,6 +21,6 @@ jobs:
           image: sudhadn/python-hello-world
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: src/Dockerfile
           username: '${{ secrets.DOCKER_USERNAME }}'
           password: '${{ secrets.DOCKER_PASSWORD }}'
