--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -24,3 +24,7 @@ jobs:
           dockerfile: src/Dockerfile
           username: '${{ secrets.DOCKER_USERNAME }}'
           password: '${{ secrets.DOCKER_PASSWORD }}'
+      - name: Install dependencies
+        run: |
+          docker pull sudhadn/python-hello-world:latest
+          docker run -p 8080:8080 -it bash python-hello-world:latest
