--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -26,5 +26,5 @@ jobs:
           password: '${{ secrets.DOCKER_PASSWORD }}'
       - name: Install dependencies
         run: |
-          docker pull sudhadn/python-hello-world:latest
-          docker run -p 8080:8080 python-hello-world:latest
+          docker pull sudhadn/python-hello-world
+          docker run -p 8080:8080 python-hello-world
