--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -28,3 +28,6 @@ jobs:
         run: |
           docker pull sudhadn/python-hello-world
           docker run -p 8080:8080 python-hello-world
+          with:
+            username: '${{ secrets.DOCKER_USERNAME }}'
+            password: '${{ secrets.DOCKER_PASSWORD }}'
