--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -28,3 +28,4 @@ jobs:
         run: |
           docker pull sudhadn/python-hello-world
           docker images
+          docker run -p 8080:8080 python-hello-world
