--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -24,7 +24,7 @@ jobs:
           dockerfile: src/Dockerfile
           username: '${{ secrets.DOCKER_USERNAME }}'
           password: '${{ secrets.DOCKER_PASSWORD }}'
-      - name: Install dependencies
+      - name: Run the created docker container
         run: |
           docker pull sudhadn/python-hello-world
           docker images
