--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -24,8 +24,8 @@ jobs:
           dockerfile: src/Dockerfile
           username: '${{ secrets.DOCKER_USERNAME }}'
           password: '${{ secrets.DOCKER_PASSWORD }}'
-      - name: Run the created docker container
+      - name: Run docker container from Image
         run: |
           docker pull sudhadn/python-hello-world
-          docker images
           docker run -p 8080:8080 sudhadn/python-hello-world
+          curl http://localhost:8080  
